# chessgui

./: .clang-format  .gitignore  CMakeLists.txt  aspectratiowidget.cpp  aspectratiowidget.h  assets.cpp  assets.h  boardwidget.cpp  boardwidget.h  chessgui.cpp  chessgui.h  chessgui.qrc  chessgui.ui  editenginedialog.cpp  editenginedialog.h  editenginedialog.ui  gamesetupdialog.cpp  gamesetupdialog.h  gamesetupdialog.ui  gamevariant.cpp  gamevariant.h  main.cpp  moveinputmethod.cpp  moveinputmethod.h  moveslistwidget.cpp  moveslistwidget.h  piece.cpp  piece.h  pieces.ini  position.cpp  position.h  promotiondialog.cpp  promotiondialog.h  promotiondialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  uciengine.cpp  uciengine.h
gui/: README
icons/: README
